--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,36 +1,46 @@
-2023年 5 月 1 日 下午 10:29
+2023-05-01
 - add: now blinger, renge and phantom_wings added (from EXT)
 - fix: fix rapier model
 
-2023年 5 月 1 日 下午 8:42
 - fix: remove arcanist potion
 - fix: item stash now works
 - fix: update model of wolf in encounter 'frigid pinnacle'
 - fix: bloom toss damage of boss dark willow
 
-2023年 5 月 1 日 下午 5:25
 - update: increase max lives to 4 (due to UI bug extra lives will not display correctly)
 - fix: remove dagon again
 - add: copy blessing implemention from EXTO
 - fix: use tome of exp before select shards will lost ability points
 
-2023年 5 月 1 日 下午 3:57
 - fix: after the boss of Act 1, now five shard rewards are available for selection
 - update: 50% precent to drop neutral tokens instead of dropping items directly
 - update: neutral items can now be shared with teammates
 
-2023年 5 月 1 日 下午 2:51
 - fix: make select map work in lobby game
 - add: now have 4 stock of tome of exp when game start, each one give 200 exp and increase 50 per tome used
 - add: partial 7.33 new items: grenade, disperser and harpoon
 - update: intiial gold increase to 1350
 
-
-2023年 5 月 1 日 下午 1:25
 - add: new hero Ogre Magi (from EXT)
 - update: Orge Magi legendary shard 'Guess We Better~' now make he becomes a universal hero and providing a strength bonus of 80% agility
 - update: remove dagon
 
-2023年 5 月 1 日 上午 4:19
-- fix the colddown of pudge's hook in hooking bonus encounter
-- add new hero nevermore (from EXTO)
+- fix: the colddown of pudge's hook in hooking bonus encounter
+- add: new hero nevermore (from EXTO)
+
+2023-05-03
+- fix: disable hub combat events
+- fix: linked ability upgrade not work (code from EXTO)
+- add: new '-jump' command to avoid trigger not triggered when enter new encounter (code from EXTO)
+- enhance: add sentry module to capture all error in CAghanim class
+
+- add: Doublarous/Moon Fly/Majo Thorn/Octarine Veil/Halberd of Tarrasque/Chrysanthemail/Savior/Ocean Pillar/Dyson Sphere/Ollie Guard/Thor's Horn/Gavuric/Cuiradiance to game (from EXT)
+- fix: Ollie Guard active ability 'Arctic Force' not working
+- update: Gavuric now provide 75% magic resist when active
+- fix: Phantom Wings colddown count correctly
+
+- update: add secretshop category to EXT equipments
+
+- fix: -jump command working now
+
+- add: new heros from EXT: Dragon Knight, Anti-Mage, Crystal Maiden, Spirit Breaker, Bounty Hunter, Storm Spirit, Lion, Venomancer
