update: change log

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -54,3 +54,9 @@
 - fix: Storm Spirit static remnant vfx
 - fix: difficult selector model
 - fix: Crystal Maid 'let it go' made crystal field unavailable
+
+2023-05-05
+- fix: lion legendenry shard 'Money Changes Hands' money amount of dropped bag
+- fix: remove dagon again
+- enhance: now can buy wards normally
+- fix: fix & enhance jugg talent
